--- a/index.html
+++ b/index.html
@@ -1,176 +1,115 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html lang="ja" dir="ltr">
 <head>
-  <meta charset="UTF-8">
-  <title>リアルタイム津波情報</title>
-  <link rel="icon" href="favicon.ico">
-  <link rel="apple-touch-icon" href="favicon.ico">
-  <style>
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      margin-top: 20px;
-      display: none; /* 初期状態は非表示 */
-    }
-    th, td {
-      border: 1px solid #ddd;
-      padding: 8px;
-      text-align: left;
-    }
-    th {
-      background-color: #f4f4f4;
-    }
-    .watch {
-      background-color: #F9F551; /* 津波注意報 */
-    }
-    .warning {
-      background-color: #EA4225; /* 津波警報 */
-    }
-    .big-warning {
-      background-color: #B626F6; /* 大津波警報 */
-    }
-    .error-message {
-      color: red;
-      font-size: 18px;
-      margin-top: 20px;
-      display: none; /* 初期状態は非表示 */
-    }
-    #clock {
-      font-size: 20px;
-      margin-top: 10px;
-      font-weight: bold;
-    }
-  </style>
+    <meta charset="utf-8" />
+    <title>Realtime Sindo</title>
+    <link rel="icon" href="favicon.ico">
+    <link rel="apple-touch-icon" href="favicon.ico">
+    <style>
+        html, body {
+            margin: 0;
+            padding: 0;
+            overflow: hidden;
+            width: 100%;
+            height: 100%;
+        }
+        .selector {
+            position: absolute;
+            left: 10px;
+            z-index: 2;
+            background: #707070;
+            padding: 5px;
+            border-radius: 5px;
+            color: white;
+            font-size: 14px;
+        }
+        .selector select {
+            background: #fff;
+            color: black;
+            border: none;
+            padding: 2px;
+            font-size: 14px;
+        }
+        .container {
+            position: absolute;
+            top: 50px;
+            left: 10px;
+            width: 352px;
+            height: 400px;
+        }
+        .fixed-image, .real-time-image {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+        }
+        .real-time-image {
+            z-index: 1;
+            visibility: hidden;
+        }
+        .fixed-image {
+            z-index: 0;
+        }
+    </style>
 </head>
 <body>
-  <h1>リアルタイム津波情報</h1>
-  <div id="clock"></div>
-  <table id="tsunami-table">
-    <thead>
-      <tr>
-        <th>地域名</th>
-        <th>種別</th>
-        <th>最大津波高さ</th>
-        <th>状況</th>
-        <th>発表元</th>
-        <th>発表時刻</th>
-      </tr>
-    </thead>
-    <tbody id="tsunami-data">
-      <!-- データがここに挿入される -->
-    </tbody>
-  </table>
-  <div id="error-message" class="error-message">
-    大津波警報・津波警報・津波注意報は発表されていません
-  </div>
+    <div class="selector">
+        <label for="monitorSelect">モニタ選択  :</label>
+        <select id="monitorSelect" onchange="updateImage()">
+            <option value="jma_s">強震モニタ</option>
+            <option value="abrspmx_s">長周期地震動モニタ</option>
+        </select>
+    </div>
 
-  <script>
-    const apiUrl = "https://api.p2pquake.net/v2/history?codes=552&limit=1";
+    <div class="container">
+        <img id="fixedImage" class="fixed-image" src="https://smi.lmoniexp.bosai.go.jp/data/map_img/CommonImg/base_map_b.gif">
+        <img id="realTimeImage" class="real-time-image" src="placeholder.jpg">
+    </div>
 
-    // データ取得と表示の処理
-    function fetchAndDisplayData() {
-      const now = new Date();
-      const year = now.getFullYear();
-      const month = String(now.getMonth() + 1).padStart(2, '0');
-      const date = String(now.getDate()).padStart(2, '0');
-      const hours = String(now.getHours()).padStart(2, '0');
-      const minutes = String(now.getMinutes()).padStart(2, '0');
-      const seconds = String(now.getSeconds()).padStart(2, '0');
-      const timeString = `${year}年${month}月${date}日 ${hours}:${minutes}:${seconds}`;
-      const clockElement = document.getElementById("clock");
+    <script>
+        function pad(number) {
+            return number < 10 ? '0' + number : number;
+        }
 
-      // 津波データの取得
-      fetch(apiUrl)
-        .then(response => response.json())
-        .then(data => {
-          const tbody = document.getElementById("tsunami-data");
-          const errorMessage = document.getElementById("error-message");
-          const table = document.getElementById("tsunami-table");
+        function updateImage() {
+            const now = new Date();
+            now.setMilliseconds(now.getMilliseconds() - 1500);
 
-          tbody.innerHTML = ""; // 以前のデータを消去
-          errorMessage.style.display = "none"; // エラーメッセージ非表示
-          table.style.display = "none"; // テーブル非表示
+            const year = now.getFullYear();
+            const month = pad(now.getMonth() + 1);
+            const day = pad(now.getDate());
+            const hours = pad(now.getHours());
+            const minutes = pad(now.getMinutes());
+            const seconds = pad(now.getSeconds());
 
-          const allAreas = [];
+            const datePart = `${year}${month}${day}`;
+            const timePart = `${hours}${minutes}${seconds}`;
 
-          data.forEach(event => {
-            event.areas.forEach(area => {
-              const areaData = {
-                name: area.name,
-                grade: area.grade,
-                maxHeight: area.maxHeight?.value || 0,
-                description: area.maxHeight?.description || "不明",
-                condition: area.firstHeight?.condition || "不明",
-                source: event.issue.source || "不明",
-                time: event.issue.time || "不明"
-              };
-              allAreas.push(areaData);
-            });
-          });
+            const monitorType = document.getElementById('monitorSelect').value;
+            const baseUrl = monitorType === "jma_s" 
+                ? "https://smi.lmoniexp.bosai.go.jp/data/map_img/RealTimeImg/jma_s"
+                : "https://www.lmoni.bosai.go.jp/monitor/data/data/map_img/RealTimeImg/abrspmx_s";
 
-          if (allAreas.length === 0) {
-            errorMessage.style.display = "block"; // エラーメッセージを表示
-            return;
-          }
+            const url = `${baseUrl}/${datePart}/${datePart}${timePart}.${monitorType}.gif`;
 
-          table.style.display = "table"; // テーブルを表示
-          const sortedAreas = allAreas.sort((a, b) => b.maxHeight - a.maxHeight);
-          sortedAreas.forEach(area => {
-            const row = document.createElement("tr");
+            const tempImage = new Image();
+            tempImage.onload = function() {
+                const realTimeImage = document.getElementById('realTimeImage');
+                realTimeImage.src = url;
+                realTimeImage.style.visibility = 'visible';
+            };
+            tempImage.onerror = function() {
+                console.error(`画像の読み込みに失敗しました: ${url}`);
+                const realTimeImage = document.getElementById('realTimeImage');
+                realTimeImage.src = document.getElementById('fixedImage').src;
+                realTimeImage.style.visibility = 'visible';
+            };
+            tempImage.src = url;
+        }
 
-            let rowClass = "";
-            if (area.grade === "Watch") {
-              rowClass = "watch";
-            } else if (area.grade === "Warning") {
-              rowClass = "warning";
-            } else if (area.grade === "BigWarning") {
-              rowClass = "big-warning";
-            }
-            row.className = rowClass;
-
-            const areaCell = document.createElement("td");
-            areaCell.textContent = area.name;
-            row.appendChild(areaCell);
-
-            const gradeCell = document.createElement("td");
-            gradeCell.textContent = area.grade === "Watch" ? "津波注意報" :
-                                    area.grade === "Warning" ? "津波警報" : "大津波警報";
-            row.appendChild(gradeCell);
-
-            const heightCell = document.createElement("td");
-            heightCell.textContent = area.description;
-            row.appendChild(heightCell);
-
-            const conditionCell = document.createElement("td");
-            conditionCell.textContent = area.condition;
-            row.appendChild(conditionCell);
-
-            const sourceCell = document.createElement("td");
-            sourceCell.textContent = area.source;
-            row.appendChild(sourceCell);
-
-            const timeCell = document.createElement("td");
-            timeCell.textContent = area.time;
-            row.appendChild(timeCell);
-
-            tbody.appendChild(row);
-          });
-        })
-        .catch(error => {
-          console.error("データ取得エラー:", error);
-        })
-        .finally(() => {
-          clockElement.textContent = timeString; // 時計を更新
-        });
-    }
-
-    // 初回データ取得と表示
-    fetchAndDisplayData();
-
-    // 毎秒データと時計を更新
-    setInterval(fetchAndDisplayData, 1000);
-  </script>
+        updateImage();
+        setInterval(updateImage, 500);
+    </script>
 </body>
 </html>
-
-
