--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         }
         .selector {
             position: absolute;
+            top: 10px;
             left: 10px;
             z-index: 2;
             background: #707070;
