--- a/index.html
+++ b/index.html
@@ -1,150 +1,113 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-    <meta charset="utf-8">
-    <title>強震モニタ</title>
-    <style>
-        html, body {
-            margin: 0;
-            padding: 0;
-            overflow: hidden;
-            width: 100%;
-            height: 100%;
-        }
-        .selector {
-            position: absolute;
-            top: 5px;
-            left: 10px;
-            z-index: 2;
-            background: #707070;
-            padding: 5px;
-            border-radius: 5px;
-            color: white;
-            font-size: 14px;
-        }
-        .selector select {
-            background: #fff;
-            color: black;
-            border: none;
-            padding: 2px;
-            font-size: 14px;
-        }
-        .container {
-            position: absolute;
-            top: 45px;
-            left: 10px;
-            width: 352px;
-            height: 400px;
-        }
-        .fixed-image, .real-time-image {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-        }
-        .real-time-image {
-            z-index: 1;
-            visibility: hidden;
-        }
-        .fixed-image {
-            z-index: 0;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <title>地震情報</title>
+  <style>
+    body {
+      font-family: sans-serif;
+      padding: 20px;
+      background-color: #f4f4f4;
+    }
+    .section {
+      background: #fff;
+      padding: 15px;
+      margin-bottom: 20px;
+      border-radius: 8px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    }
+  </style>
 </head>
 <body>
-    <div class="selector">
-        <label for="monitorSelect">モニタ選択 :</label>
-        <select id="monitorSelect" onchange="updateImage()">
-            <option value="category_jma" disabled>─ 強震モニタ 地表 ─</option>
-            <option value="jma_s">リアルタイム震度</option>
-            <option value="acmap_s">最大加速度</option>
-            <option value="vcmap_s">最大速度</option>
-            <option value="dcmap_s">最大変位</option>
-            <option value="rsp0125_s">0.125Hz速度応答</option>
-            <option value="rsp0250_s">0.25Hz速度応答</option>
-            <option value="rsp0500_s">0.5Hz速度応答</option>
-            <option value="rsp1000_s">1.0Hz速度応答</option>
-            <option value="rsp2000_s">2.0Hz速度応答</option>
-            <option value="rsp4000_s">4.0Hz速度応答</option>
+  <h1></h1>
+  <div id="infoContainer" class="section">読み込み中...</div>
 
-            <option value="category_jma_b" disabled>─ 強震モニタ 地中 ─</option>
-            <option value="jma_b">リアルタイム震度</option>
-            <option value="acmap_b">最大加速度</option>
-            <option value="vcmap_b">最大速度</option>
-            <option value="dcmap_b">最大変位</option>
-            <option value="rsp0125_b">0.125Hz速度応答</option>
-            <option value="rsp0250_b">0.25Hz速度応答</option>
-            <option value="rsp0500_b">0.5Hz速度応答</option>
-            <option value="rsp1000_b">1.0Hz速度応答</option>
-            <option value="rsp2000_b">2.0Hz速度応答</option>
-            <option value="rsp4000_b">4.0Hz速度応答</option>
+  <script>
+    async function fetchLatestQuakeData() {
+      try {
+        const listRes = await fetch('https://www.jma.go.jp/bosai/quake/data/list.json');
+        const listData = await listRes.json();
+        const latestJsonFile = listData[0].json;
 
-            <option value="category_abrspmx" disabled>─ 長周期地震動モニタ ─</option>
-            <option value="abrsp1s_s">階級データ（周期1秒台）</option>
-            <option value="abrsp2s_s">階級データ（周期2秒台）</option>
-            <option value="abrsp3s_s">階級データ（周期3秒台）</option>
-            <option value="abrsp4s_s">階級データ（周期4秒台）</option>
-            <option value="abrsp5s_s">階級データ（周期5秒台）</option>
-            <option value="abrsp6s_s">階級データ（周期6秒台）</option>
-            <option value="abrsp7s_s">階級データ（周期7秒台）</option>
-        </select>
-    </div>
+        const quakeRes = await fetch(`https://www.jma.go.jp/bosai/quake/data/${latestJsonFile}`);
+        const quakeData = await quakeRes.json();
 
-    <div class="container">
-        <img id="fixedImage" class="fixed-image" src="https://smi.lmoniexp.bosai.go.jp/data/map_img/CommonImg/base_map_b.gif">
-        <img id="realTimeImage" class="real-time-image" src="placeholder.jpg">
-    </div>
+        const container = document.getElementById("infoContainer");
+        let html = "";
 
-    <script>
-        function pad(number) {
-            return number < 10 ? '0' + number : number;
+        const control = quakeData.Control;
+        const head = quakeData.Head;
+        const body = quakeData.Body;
+        const eq = body?.Earthquake;
+        const int = body?.Intensity?.Observation;
+
+        if (head?.InfoKind) {
+          document.querySelector("h1").innerHTML = head.InfoKind;
         }
 
-        function updateImage() {
-            const now = new Date();
-            now.setMilliseconds(now.getMilliseconds() - 1500);
-
-            const year = now.getFullYear();
-            const month = pad(now.getMonth() + 1);
-            const day = pad(now.getDate());
-            const hours = pad(now.getHours());
-            const minutes = pad(now.getMinutes());
-            const seconds = pad(now.getSeconds());
-
-            const datePart = `${year}${month}${day}`;
-            const timePart = `${hours}${minutes}${seconds}`;
-
-            const monitorType = document.getElementById('monitorSelect').value;
-
-            if (monitorType.startsWith("category_")) return;
-
-            let baseUrl;
-            if (monitorType.startsWith("abrsp")) {
-                baseUrl = `https://www.lmoni.bosai.go.jp/monitor/data/data/map_img/RealTimeImg/${monitorType}/${datePart}/${datePart}${timePart}.${monitorType}.gif`;
-            } else {
-                baseUrl = `https://smi.lmoniexp.bosai.go.jp/data/map_img/RealTimeImg/${monitorType}/${datePart}/${datePart}${timePart}.${monitorType}.gif`;
-            }
-
-            console.log("取得URL: ", baseUrl);
-
-            const tempImage = new Image();
-            tempImage.onload = function() {
-                const realTimeImage = document.getElementById('realTimeImage');
-                realTimeImage.src = baseUrl;
-                realTimeImage.style.visibility = 'visible';
-            };
-            tempImage.onerror = function() {
-                console.error(`画像の読み込みに失敗しました: ${baseUrl}`);
-                const realTimeImage = document.getElementById('realTimeImage');
-                realTimeImage.src = document.getElementById('fixedImage').src;
-                realTimeImage.style.visibility = 'visible';
-            };
-            tempImage.src = baseUrl;
+        if (control?.Title) {
+          html += `<p><strong>詳細情報:</strong> ${control.Title}</p>`;
         }
 
-        updateImage();
-        setInterval(updateImage, 500);
-    </script>
+        if (control?.EditorialOffice) {
+          html += `<p><strong>編集官署:</strong> ${control.EditorialOffice}</p>`;
+        }
+
+        if (head?.InfoType && head?.Serial) {
+          html += `<p><strong>情報種別:</strong> ${head.InfoType} ${head.Serial}</p>`;
+        }
+
+        if (eq?.Hypocenter?.Area?.Name) {
+          html += `<p><strong>震源地:</strong> ${eq.Hypocenter.Area.Name}</p>`;
+        }
+
+        if (eq?.Hypocenter?.Area?.Code) {
+          html += `<p><strong>震央コード:</strong> ${eq.Hypocenter.Area.Code}</p>`;
+        }
+
+        if (int?.MaxInt) {
+          html += `<p><strong>最大震度:</strong> ${int.MaxInt}</p>`;
+        }
+
+        if (eq?.Magnitude) {
+          html += `<p><strong>マグニチュード:</strong> ${eq.Magnitude}</p>`;
+        }
+
+        let lat = "不明", lon = "不明";
+        const coordMatch = eq?.Hypocenter?.Area?.Coordinate?.match(/\+([0-9.]+)\+([0-9.]+)(-?[0-9]+)/);
+        if (coordMatch) {
+          lat = coordMatch[1];
+          lon = coordMatch[2];
+          html += `<p><strong>座標:</strong> 緯度 ${lat} / 経度 ${lon}</p>`;
+        }
+
+        let depth = "";
+        if (coordMatch) {
+          depth = Math.abs(parseInt(coordMatch[3], 10)) / 1000;
+          html += `<p><strong>深さ:</strong> ${depth} km</p>`;
+        }
+
+        if (eq?.OriginTime) {
+          html += `<p><strong>発生時刻:</strong> ${new Date(eq.OriginTime).toLocaleString()}</p>`;
+        }
+
+        if (head?.Headline?.Text) {
+          html += `<p><strong>コメント:</strong> ${head.Headline.Text}</p>`;
+        }
+
+        if (control?.PublishingOffice) {
+          html += `<p><strong>提供元:</strong> ${control.PublishingOffice}</p>`;
+        }
+
+        container.innerHTML = html;
+
+      } catch (err) {
+        document.getElementById("infoContainer").innerHTML = "エラー: " + err.message;
+      }
+    }
+
+    fetchLatestQuakeData();
+    setInterval(fetchLatestQuakeData, 1000);
+  </script>
 </body>
 </html>
