--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
       white-space: normal;
       word-break: keep-all;
       overflow-wrap: break-word;
+      line-height: 1.5;
     }
   </style>
 </head>
