--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <title>地震情報</title>
+  <link rel="icon" href="favicon.ico">
+  <link rel="apple-touch-icon" href="favicon.ico">
   <style>
     body {
       font-family: sans-serif;
@@ -182,7 +184,7 @@
     }
 
     fetchLatestQuakeData();
-    setInterval(fetchLatestQuakeData, 500);
+    setInterval(fetchLatestQuakeData, 100);
   </script>
 </body>
 </html>
